--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
       <app-servers></app-servers>
       <!-- <div app-servers></div> -->
       <!-- <div class="app-servers"></div> -->
+      <hr />
+      <app-warning-component></app-warning-component>
+      <app-succes-alert></app-succes-alert>
     </div>
   </div>
 </div>
