--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -11,8 +11,9 @@
 </button>
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{ serverCreationStatus }}</p> -->
-<p *ngIf="serverCreated">
+<p *ngIf="serverCreated; else noServer">
   Server was created, server name is {{ serverName }}.
 </p>
+<ng-template #noServer> No server was created. </ng-template>
 <app-server> </app-server>
 <app-server> </app-server>
