--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p>Server with ID {{ serverId }} is {{ getServerstatus() }}</p>
+<p [ngStyle]="{ backgroundColor: getColor() }">
+  Server with ID {{ serverId }} is {{ getServerstatus() }}
+</p>
